# panda

./: CHANGELOG.md  CHANGELOG.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
Ctl/: VERSION
panda/: __init__.py  __main__.py
panda/data/: panda.txt
