[tool.poetry]
name = "panda"
repository = "https://github.com/vegu/panda"
version = "4.1.3"
description = "Full control of your environment"
authors = ["vegu <code@vegu.com>"]
readme = "README.md"
license = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Documentation",
]

packages = [
    { include = "panda", from = "src" },
]


[tool.poetry.scripts]
panda = "panda.cli:main"

[tool.poetry.dependencies]
python = "^3.8"

confu = ">=1.4"
git-url-parse = ">=1.1"
grainy = ">=1.4"
munge = ">=1"
natsort = ">=8"
pluginmgr = ">=1"
semver = "<=3"

[tool.poetry.dev-dependencies]
# testing
coverage = ">=5"
pytest = ">=6"
pytest-cov = "^2.10.1"
pytest-filedata = "^0.4.0"
tox = ">=3"
tox-gh-actions = ">=2"

jinja2 = ">=2"
tmpl = ">=1"
twine = ">=3"
PyYAML = ">1"
tomlkit = "<1"

# linting
# bandit = ">=1.6.2"
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.2.3"


[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
